deploy/kubernetes/website/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - image: vikramtiwari/website:latest
        imagePullPolicy: Always
        name: website
        ports:
        - containerPort: 8080
