deploy/kubernetes/website/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: website
  namespace: website
  labels:
    app: website
    tier: frontend
spec:
  containers:
  - name: git-sync
    image: gcr.io/google_containers/git-sync
    imagePullPolicy: Always
    volumeMounts:
    - name: www
      mountPath: /git
  - name: nginx
    image: nginx
    volumeMounts:
    - name: www
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
    - containerPort: 443
  volumes:
  - name: www
    emptyDir: {}
