deploy/kubernetes/website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    name: website
